<resources>
    <string name="app_name">TrucksterApp</string>
    <string name="username">username</string>
    <string name="password">password</string>
    <string name="login_with_fb">LogIn with Fb</string>
    <string name="login_with_google">Login with Google</string>
    <string name="error_field_required">This field is required</string>
    <string name="login">LOGIN</string>
    <string name="facebook_app_id">1729367163976511</string>
    <string name="fb_login_protocol_scheme">fb1729367163976511</string>
    <string name="enter_your_phone_number">Enter your phone number</string>
    <string name="enter_recived_sms">enter recived SMS</string>
    <string name="validate">Validate</string>
    <string name="Continue">Continue</string>
    <string name="general_success_title">Success</string>
    <string name="image_view_content_description">Image View</string>
    <string name="no_items">No items</string>
    <string name="no_items_home_feed">No Items</string>
    <string name="title_activity_login_pane">Map</string>
    <string name="title_activity_validate__pane">Validate_Pane</string>
    <string name="title_activity_select_trailer">Map</string>
    <string name="title_activity_main_screen">MainScreenActivity</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Jason Smith</string>
    <string name="nav_header_subtitle">5.0</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>
    <string name="select_trailer">Select Trailer</string>
    <string name="seen">seen</string>
    <string name="sending">sending…</string>
    <string name="message_not_sent">Message not sent!</string>
    <string name="sent">sent!</string>

    <string name="today">today</string>
    <string name="yesterday">yesterday</string>


    <string name="record">Record</string>
    <string name="stopRecording">Stop Recording</string>
    <string name="playRecord">Play Record</string>
    <string name="stopPlayingRecord">Stop Playing Record</string>


    <string name="make_video">make video</string>
    <string name="media_message_sent">Media content sent successfully!</string>
    <string name="take_photo">take photo</string>
    <string name="upload_from_library">upload from library</string>
    <string name="cancel">Cancel</string>
    <string name="select_picture">Select Picture</string>
    <!--<string name="navigation_drawer_open">Open</string>-->
    <!--<string name="navigation_drawer_close">Close</string>-->

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="title_activity_current_load">CurrentLoadActivity</string>
    <string name="type_your_message">New Message</string>
    <string name="try_again">try_again</string>
    <string name="title_activity_camera">CameraActivity</string>
    <string name="preff">preff</string>
    <string name="sliki">sliki</string>
    <string name="aac">aac</string>
    <string name="document">document</string>

    <string name="warning">It is not safe to drive and use your phone. Please confirm that you are passenger in the vehicle </string>
    <string name="firebaseToken">firebaseToken</string>
</resources>
